# raspigrow

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  fig1.drawio  index.yaml
server/: .gitignore  Dockerfile  Grow.db  Grow.sln  docker-compose.yml  main.py  nuget.config  pyproject.toml  requirements.txt
server/migrations/: env.py
server/migrations/versions/: 295b41e808ea_rename_channel_to_topic.py  d8d84a3cc801_add_channel_to_sensor_reading.py
server/src/: database.py  main.py  mqtt.py  redis.py  settings.py  sql.py  worker.py
server/src/Grow.Api/: Grow.Api.csproj  Grow.Api.http  MapperProfile.cs  Program.cs  appsettings.json
server/src/Grow.Api/Models/: SensorReadingV1.cs
server/src/Grow.Api/Properties/: launchSettings.json
server/src/Grow.Console/: Grow.Console.csproj  Program.cs  appsettings.json
server/src/Grow.Events/: Grow.Events.csproj  SensorReadingV1.cs
server/src/Grow.Events.Handlers/: Grow.Events.Handlers.csproj  MapperProfile.cs  SensorReadingV1Handler.cs
server/src/Grow.Migrations/: 20250106_AddSensorReadingTable.cs  Grow.Migrations.csproj
server/src/Grow.Sensor/: Grow.Sensor.csproj  ITimeSeriesRepository.cs  SensorReadingEntity.cs  SensorReadingRepository.cs
server/src/Grow.Worker/: Grow.Worker.csproj  Program.cs  appsettings.json
server/src/Grow.Worker/Properties/: launchSettings.json
server/src/api/: auth.py  factory.py
server/src/contexts/: redis.py  sensor.py
server/src/data/: sensor.py
server/src/models/: sensor.py
server/test/: conftest.py  test_worker.py
server/test/data/: test_sensor.py
(+88 files in other folders)
